# roadmap-meta

./: README.md
mateusz_expenses/: .gitignore  README.md  pyproject.toml
mateusz_expenses/src/expenses_cli/: cli.py
nyc-taxi-mini-eda/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  requirements.txt
nyc-taxi-mini-eda/data/processed/: check_by_hour.parquet  mean_check_by_hour.parquet  revenue_by_loc.parquet  taxi_clean.parquet  total_amount_by_pulocationid.parquet
nyc-taxi-mini-eda/notebooks/: eda.ipynb
nyc-taxi-mini-eda/src/: pipe.py
