[project]
name = "expenses-cli"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "matplotlib>=3.9",
    "typer>=0.12",
    "python-dateutil>=2.9",
    "tzdata>=2024.1",
]

[project.scripts]
expenses = "expenses_cli.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["expenses_cli*", "utils*"]